animation added in desktop

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "zeedweb-57859",
+    "default": "zeed-4f6b8",
     "staging": "zeedweb-57859"
   },
   "targets": {},
