--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   video_player: ^2.5.3
   flick_video_player: ^0.5.0
+  marquee: ^2.2.3
 
 dev_dependencies:
   flutter_test:
