--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   video_player: ^2.5.3
   flick_video_player: ^0.5.0
   marquee: ^2.2.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
