--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flick_video_player: ^0.5.0
   marquee: ^2.2.3
   carousel_slider: ^4.2.1
+  responsive_builder: ^0.6.4
 
 dev_dependencies:
   flutter_test:
